; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_stubmanager.c_start_apartment_remote_unknown.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_stubmanager.c_start_apartment_remote_unknown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i64 }

@S_OK = common dso_local global i64 0, align 8
@IID_IRemUnknown = common dso_local global i32 0, align 4
@MSHCTX_DIFFERENTMACHINE = common dso_local global i32 0, align 4
@MSHLFLAGS_NORMAL = common dso_local global i32 0, align 4
@MSHLFLAGSP_REMUNKNOWN = common dso_local global i32 0, align 4
@TRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @start_apartment_remote_unknown(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %6 = load i64, i64* @S_OK, align 8
  store i64 %6, i64* %4, align 8
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 0
  %9 = call i32 @EnterCriticalSection(i32* %8)
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %38, label %14

14:                                               ; preds = %1
  %15 = call i64 @RemUnknown_Construct(i32** %3)
  store i64 %15, i64* %4, align 8
  %16 = load i64, i64* %4, align 8
  %17 = load i64, i64* @S_OK, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %37

19:                                               ; preds = %14
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = load i32, i32* @MSHCTX_DIFFERENTMACHINE, align 4
  %23 = load i32, i32* @MSHLFLAGS_NORMAL, align 4
  %24 = load i32, i32* @MSHLFLAGSP_REMUNKNOWN, align 4
  %25 = or i32 %23, %24
  %26 = call i64 @marshal_object(%struct.TYPE_4__* %20, i32* %5, i32* @IID_IRemUnknown, i32* %21, i32 %22, i32* null, i32 %25)
  store i64 %26, i64* %4, align 8
  %27 = load i32*, i32** %3, align 8
  %28 = call i32 @IRemUnknown_Release(i32* %27)
  %29 = load i64, i64* %4, align 8
  %30 = load i64, i64* @S_OK, align 8
  %31 = icmp eq i64 %29, %30
  br i1 %31, label %32, label %36

32:                                               ; preds = %19
  %33 = load i64, i64* @TRUE, align 8
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  store i64 %33, i64* %35, align 8
  br label %36

36:                                               ; preds = %32, %19
  br label %37

37:                                               ; preds = %36, %14
  br label %38

38:                                               ; preds = %37, %1
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 0
  %41 = call i32 @LeaveCriticalSection(i32* %40)
  %42 = load i64, i64* %4, align 8
  ret i64 %42
}

declare dso_local i32 @EnterCriticalSection(i32*) #1

declare dso_local i64 @RemUnknown_Construct(i32**) #1

declare dso_local i64 @marshal_object(%struct.TYPE_4__*, i32*, i32*, i32*, i32, i32*, i32) #1

declare dso_local i32 @IRemUnknown_Release(i32*) #1

declare dso_local i32 @LeaveCriticalSection(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
